terraform/rds.tf
resource "aws_security_group" "rds" {
  name   = "giants-sg-rds"
  vpc_id = aws_vpc.main.id

  ingress {
    description = "Allow MySQL from EKS app security group"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"

    security_groups = [
      aws_eks_cluster.main.vpc_config[0].cluster_security_group_id
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "giants-sg-rds"
  }
}

resource "aws_db_subnet_group" "main" {
  name = "giants-db-subnet-group"

  subnet_ids = [
    aws_subnet.private_1.id,
    aws_subnet.private_2.id
  ]

  tags = {
    Name = "giants-db-subnet-group"
  }
}

resource "aws_db_instance" "main" {
  identifier = "giants-rds-mysql"

  engine         = "mysql"
  engine_version = "8.0"
  instance_class = "db.t3.micro"

  allocated_storage = 20
  storage_type      = "gp2"

  db_name  = "giants_rds"
  username = "var.db_username"
  password = "var.db_password"

  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds.id]

  publicly_accessible = false
  multi_az            = false

  skip_final_snapshot = true
  deletion_protection = false

  tags = {
    Name = "giants-rds-mysql"
  }
}
